Second level of main navigation

--- a/src/components/navigation.module.css
+++ b/src/components/navigation.module.css
@@ -2,11 +2,15 @@
   display: flex;
   justify-content: center;
   list-style: none;
-  padding: 0;
+  /*padding: 0;
   margin: 0;
   height: 20vh;
   max-height: 100px;
-  font-size: 1.25em;
+  font-size: 1.25em;*/
+  background-color: #fff;
+  width: auto;
+  height: auto;
+  line-height: auto !important;
 }
 
 .navigationItem {
@@ -16,5 +20,67 @@
 }
 
 .navigationItem a {
-  color: currentColor;
+  /*color: currentColor;*/
+  color:#666;
+}
+.navigationItem:hover {
+  background-color: #F1F4F5;
+}
+.navigationItem a:hover {
+  background-color: #E6E9EB;
+}
+
+
+/* second level navigation colors */
+.navigationItem .navigationItem  a {
+  background-color: #F1F4F5;
+  padding: 14px 0px 14px 10px;
+  }
+  
+  /* second level navigation colors */
+  ..navigationItem:hover .navigationItem a {
+    color:#535D62;
+  }
+  
+  /* second level navigation colors */
+  .navigationItem .navigationItem:hover a {
+    background-color: #E6E9EB;
+    color:#535D62;
+  }
+  
+  /* third level navigation colors */
+  .navigationItem .navigationItem .navigationItem a {
+  background-color: #E6E9EB;
+  }
+  
+  /* navigation hover colors */
+  .navigationItem .navigationItem .navigationItem a:hover {
+  background-color: #D5DCE0;
+  }
+  /* skip links */
+.button--skip-link:not(:focus):not(:hover) {
+  -webkit-transform: translateY(-4em);
+  -ms-transform: translateY(-4em);
+  transform: translateY(-4em);
+  opacity: 0;
+}
+button:focus, 
+.button--skip-link:focus {
+    border-color: #062434;
+}
+.button--skip-link:hover, .button--skip-link:focus, 
+button:hover, button:focus {
+    background-color: #08364E;
+    text-decoration: none;
+    color: #fff;
+}
+.button--skip-link {
+    margin: 0 auto;
+    position: absolute;
+    z-index: 20;
+    left: 0;
+    right: 0;
+    top: 1em;
+    width: 10em;
+    opacity: 1;
 }
