--- a/src/components/navigation.module.css
+++ b/src/components/navigation.module.css
@@ -2,8 +2,9 @@
   display: flex;
   justify-content: center;
   list-style: none;
-  /*padding: 0;
+  padding: 0;
   margin: 0;
+  /*
   height: 20vh;
   max-height: 100px;
   font-size: 1.25em;*/
