--- a/src/components/navigation.module.css
+++ b/src/components/navigation.module.css
@@ -2,12 +2,12 @@
   display: flex;
   justify-content: center;
   list-style: none;
-  padding: 0;
+  padding: 1em;
   margin: 0;
   /*
   height: 20vh;
-  max-height: 100px;
-  font-size: 1.25em;*/
+  max-height: 100px;*/
+  font-size: .9em;
   background-color: #fff;
   width: auto;
   height: auto;
