--- a/src/components/navigation.module.css
+++ b/src/components/navigation.module.css
@@ -2,12 +2,12 @@
   display: flex;
   justify-content: center;
   list-style: none;
-  padding: 1em;
+  padding: 1rem;
   margin: 0;
   /*
   height: 20vh;
   max-height: 100px;*/
-  font-size: .9em;
+  font-size: .85rem;
   background-color: #fff;
   width: auto;
   height: auto;
